# Rendy3D

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/loaders/: Cargo.toml
crates/loaders/src/: lib.rs  obj.rs  stl.rs
crates/maths/: Cargo.toml
crates/maths/src/: lib.rs  main.rs
crates/renderer/: Cargo.toml
crates/renderer/benches/: draw_cube.rs
crates/renderer/src/: lib.rs  main.rs  render.rs
crates/renderer/src/graphics/: camera.rs  colour.rs  draw.rs  interpolate.rs  mesh.rs  mod.rs  object.rs  perspective.rs  rasterizer.rs  screen.rs  target.rs  texture.rs  viewport.rs
crates/renderer/src/graphics/geometry/: clipping.rs  line.rs  mod.rs  plane.rs  polygon.rs  quad.rs  triangle.rs
crates/renderer/src/graphics/geometry_3d/: cube.rs  mod.rs  point.rs  triangle.rs
crates/renderer/src/graphics/mesh/: indexed.rs  mod.rs  non_indexed.rs  vertices.rs
crates/renderer/src/graphics/pipeline/: back_face_culling.rs  mod.rs  pipeline.rs
crates/renderer/src/graphics/rasterizer/: mod.rs  triangle_rasterizer.rs
crates/renderer/src/graphics/shaders/: fragment.rs  mod.rs  shaders.rs  vertex.rs
crates/renderer/src/graphics/shapes_2d/: bounding_area.rs  line.rs  mod.rs  point.rs  polygon.rs  triangle.rs
crates/renderer/src/graphics/shapes_3d/: point.rs  triangle.rs
crates/renderer/src/loaders/: mod.rs  obj.rs  stl.rs
src/: main.rs  maths.rs
src/graphics/: colour.rs  mod.rs  screen.rs  viewport.rs
src/graphics/shapes/: mod.rs  polygon.rs  triangle.rs
src/graphics/shapes_2d/: line.rs  mod.rs  point.rs  polygon.rs  triangle.rs
src/graphics/shapes_3d/: mod.rs  point.rs  triangle.rs
src/loaders/: stl.rs
src/maths/: mod.rs  vector2.rs  vector3.rs
stl-viewer/: Cargo.toml
stl-viewer/src/: main.rs
test/: Cargo.toml
test/src/: main.rs
viewy3d/: Cargo.toml
viewy3d/src/: control.rs  frame_time_counter.rs  main.rs  text.rs  world.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs  render_pipeline.rs  timer.rs
website/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
website/src/: main.ts
(+22 files in other folders)
