[package]
name = "test-binary"
version = "0.1.0"
edition = "2024"
default-run = "test-binary"
[dependencies]
rendy3d = { path = "../crates/renderer", features = ["std"] }
rendy3d-loaders = { path = "../crates/loaders" }
winit = "0.29"
winit_input_helper = "0.16"
pixels = "0.15.0"
env_logger = "0.11.8"
error-iter = "0.4"
hsv = "0.1.1"
log = "0.4"
