[package]
name = "rendy3d"
version = "0.1.0"
edition = "2024"
default-run = "rendy3d"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "add"] }
env_logger = "0.11.8"
error-iter = "0.4"
fixed-capacity-vec = "1.0.1"
hsv = "0.1.1"
log = "0.4"
pixels = "0.15.0"
stl_io = "0.8.5"
winit = "0.29"
winit_input_helper = "0.16"
maths = { path = "../maths" }
obj-rs = "0.7.4"
