[package]
name = "rendy3d"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = [
	"deref",
	"deref_mut",
	"add",
], default-features = false }
stl_io = { version = "0.8.5", optional = true }
rendy3d-maths = { path = "../maths" }
obj-rs = { version = "0.7.4", optional = true }
image = { version = "0.25.6", optional = true }

[features]
default = ["std"]
std = ["dep:image", "dep:stl_io", "dep:obj-rs", "rendy3d-maths/std"]
