[package]
name = "rendy3d"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = [
	"deref",
	"deref_mut",
	"add",
], default-features = false }
rendy3d-maths = { path = "../maths" }
image = { version = "0.25.6", optional = true }

[features]
default = ["std"]
std = ["dep:image", "rendy3d-maths/std"]
